feat: PostRepository MyBatis SQL Mapper 기반으로 전환
- PostRepository: 메모리 기반 클래스 → @Mapper 인터페이스로 전환
- PostMapper.xml: CRUD(insert/update/delete) + 페이징(LIMIT/OFFSET) SQL 매핑 추가
- PostService: 인메모리 정렬/페이징 제거, DB 쿼리 기반으로 리팩터링
- MybatisConfig: SqlSessionFactory/SqlSessionTemplate 수동 생성
- VibeApp: @MapperScan("com.example.vibeapp") 추가
- data.sql: IDENTITY 시퀀스 RESTART WITH 6 추가 (PK 충돌 방지)